--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,43 +1,27 @@
 {
-  "name": "cpsc-2600-project",
+  "name": "frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.10.6",
-    "@mantine/core": "^5.10.4",
-    "@mantine/dates": "^5.10.4",
-    "@mantine/dropzone": "^5.10.4",
-    "@mantine/hooks": "^5.10.4",
-    "@mantine/modals": "^5.10.4",
-    "@mantine/notifications": "^5.10.4",
-    "@mantine/nprogress": "^5.10.4",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.12",
+    "@headlessui/react": "^1.7.13",
+    "@types/node": "^16.18.14",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
-    "dayjs": "^1.11.7",
-    "mongoose": "^6.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.1",
+    "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
-    "dev": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
-      "react-app",
-      "react-app/jest"
+      "react-app"
     ]
   },
   "browserslist": {
@@ -53,6 +37,7 @@
     ]
   },
   "devDependencies": {
-    "nodemon": "^2.0.20"
+    "@iconify/react": "^4.1.0",
+    "tailwindcss": "^3.2.7"
   }
 }
