--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,8 @@
     "typescript": "^4.9.5"
   },
   "scripts": {
-    "dev": "tsc-watch --onSuccess \"node dist/app.js\" --noClear"
+    "dev": "tsc-watch --onSuccess \"node dist/app.js\" --noClear",
+    "build": "tsc",
+    "start": "node dist/app.js"
   }
 }
