--- a/backend/package.json
+++ b/backend/package.json
@@ -2,7 +2,8 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongoose": "^7.0.1"
+    "mongoose": "^7.0.1",
+    "tsc-watch": "^6.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
