add: working backend

--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-MONGO_URI=mongodb+srv://admin:Gbv8qQtsfiSaD5xA@salesscout.nv3nq2s.mongodb.net/?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://admin:9RQSdxqZaiC08aBT@salesscout.jjpvicz.mongodb.net/?retryWrites=true&w=majority
