--- a/backend/package.json
+++ b/backend/package.json
@@ -2,8 +2,10 @@
   "dependencies": {
     "axios": "^1.3.4",
     "cheerio": "^1.0.0-rc.12",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "moment": "^2.29.4",
     "mongoose": "^7.0.1",
     "node-cron": "^3.0.2",
     "tsc-watch": "^6.0.0"
