--- a/backend/package.json
+++ b/backend/package.json
@@ -3,6 +3,7 @@
     "axios": "^1.3.4",
     "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
+    "discord-webhook-node": "^1.1.8",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "moment": "^2.29.4",
