--- a/backend/package.json
+++ b/backend/package.json
@@ -3,13 +3,11 @@
     "axios": "^1.3.4",
     "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
-    "discord-webhook-node": "^1.1.8",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "moment": "^2.29.4",
     "mongoose": "^7.0.1",
-    "node-cron": "^3.0.2",
-    "tsc-watch": "^6.0.0"
+    "node-cron": "^3.0.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
@@ -20,7 +18,7 @@
   },
   "scripts": {
     "dev": "tsc-watch --onSuccess \"node dist/app.js\" --noClear",
-    "build": "tsc",
+    "build": "npm install && tsc",
     "start": "node dist/app.js"
   }
 }
