--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,8 @@
     "express": "^4.18.2",
     "moment": "^2.29.4",
     "mongoose": "^7.0.1",
-    "node-cron": "^3.0.2"
+    "node-cron": "^3.0.2",
+    "tsc-watch": "^6.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
@@ -17,8 +18,8 @@
     "typescript": "^4.9.5"
   },
   "scripts": {
-    "dev": "tsc-watch --onSuccess \"node dist/app.js\" --noClear",
-    "build": "npm install && tsc",
+    "dev": "npx tsc-watch --onSuccess \"node dist/app.js\" --noClear",
+    "build": "npx tsc",
     "start": "node dist/app.js"
   }
 }
