--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "dependencies": {
     "@headlessui/react": "^1.7.13",
+    "@tailwindcss/forms": "^0.5.3",
     "@types/node": "^16.18.14",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.0",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
