--- a/backend/package.json
+++ b/backend/package.json
@@ -3,11 +3,11 @@
     "axios": "^1.3.4",
     "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
+    "cron": "^2.3.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "moment": "^2.29.4",
     "mongoose": "^7.0.1",
-    "node-cron": "^3.0.2",
     "tsc-watch": "^6.0.0"
   },
   "devDependencies": {
