--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,9 @@
   },
   "devDependencies": {
     "@iconify/react": "^4.1.0",
-    "tailwindcss": "^3.2.7"
+    "tailwindcss": "^3.2.7",
+    "webpack": "^5.77.0",
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.13.2"
   }
 }
