--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
     "tsc-watch": "^6.0.0"
   },
   "devDependencies": {
+    "@types/cron": "^2.0.1",
     "@types/express": "^4.17.17",
     "@types/node": "^18.15.3",
     "nodemon": "^2.0.21",
@@ -18,7 +19,7 @@
     "typescript": "^4.9.5"
   },
   "scripts": {
-    "dev": "npx tsc-watch --onSuccess \"node dist/app.js\" --noClear",
+    "dev": "npx tsc-watch --onSuccess \"node build/app.js\" --noClear",
     "build": "npx tsc",
     "start": "node dist/app.js",
     "prod": "npm run build && npm run start"
