--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,3 @@
 MONGO_URI=mongodb+srv://admin:9RQSdxqZaiC08aBT@salesscout.jjpvicz.mongodb.net/?retryWrites=true&w=majority
+CORS_ORIGIN=http://localhost:8080,https://projects.ashwin.lol/
+PORT=3541
