--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,7 @@
     "typescript": "^4.9.5"
   },
   "scripts": {
-    "dev": "npx tsc-watch --onSuccess \"node build/app.js\" --noClear",
+    "dev": "npx tsc-watch --onSuccess \"node dist/app.js\" --noClear",
     "build": "npx tsc",
     "start": "node dist/app.js",
     "prod": "npm run build && npm run start"
